--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <section id="container">
       <article id="innerContainer"><p id="innerContainerText">Press any key to get the keycode</p></article>
     </section>
+    <script src="./script.js"></script>
   </body>
 </html>
